plot pc ratio chart

--- a/uoa.ipynb
+++ b/uoa.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,10 @@
     "import numpy as np\n",
     "import math\n",
     "import os\n",
-    "from functools import reduce"
+    "from functools import reduce\n",
+    "from IPython.display import display\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns"
    ]
   },
   {
@@ -29,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +49,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def parse_data_df_to_excel(df): \n",
+    "    df['Exp Date'] = pd.to_datetime(df['Exp Date']).dt.date\n",
+    "    df['Trade date'] = pd.to_datetime(df['Trade date']).dt.date\n",
+    "    data_df = df.loc[:].dropna()\n",
+    "    data_df = data_df.astype({'DTE': int})\n",
+    "    return data_df.values.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def parse_data_headers(df): \n",
+    "    df.rename(columns={'Time': 'Trade date'}, inplace=True)\n",
+    "    return df.columns.values.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,16 +85,19 @@
     "\n",
     "for entry in os.listdir(FOLER_PATH):\n",
     "    file_path = os.path.join(FOLER_PATH, entry)\n",
-    "    \n",
+    "    print(file_path)\n",
     "    if os.path.isfile(file_path):\n",
     "        df = pd.read_csv(file_path)\n",
-    "        column_headers = df.columns.values.tolist()\n",
-    "        data.extend(df.loc[:].values.tolist())\n",
+    "        column_headers = parse_data_headers(df)\n",
+    "        data.extend(parse_data_df_to_excel(df))\n",
     "\n",
     "# flatten as single level array \n",
     "all_data = []\n",
     "all_data.extend([column_headers])\n",
     "all_data.extend(data)\n",
+    "\n",
+    "print(all_data[0])\n",
+    "print(all_data[1])\n",
     "\n",
     "output_file = open(f'{OUTPUT_FILE_PATH}.csv', 'w',  newline='')\n",
     "writer =  csv.writer(output_file)\n",
@@ -82,11 +113,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Display some data for visual check "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = pd.read_csv(f'{OUTPUT_FILE_PATH}.csv')\n",
+    "display(df.head())\n",
+    "display(df.info())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>Sort and add useful columns</h3>"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -97,6 +146,65 @@
     "arrange according to ticker / DTE / type\n",
     "calculate total call + put \n",
     "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.sort_values(['Symbol', 'DTE', 'Type'], ascending=True)\n",
+    "df['Amount'] = df['Volume'] * df['Midpoint']\n",
+    "display(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Replace file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(f'{OUTPUT_FILE_PATH}.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>Daily trade put-call charts</h3>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "daily_group = df.groupby([\"Trade date\", \"Type\"]).agg({'Amount': 'sum'})\n",
+    "daily_group = daily_group.reset_index()\n",
+    "daily_group"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def line_plot(data): \n",
+    "    fig = plt.figure(figsize=(20, 6))\n",
+    "    sns.lineplot(data=data, x=\"Trade date\", y=\"Amount\", hue=\"Type\")\n",
+    "    plt.show()\n",
+    "    \n",
+    "line_plot(daily_group)"
    ]
   }
  ],
