WIP: monthly roi output

--- a/Portfolio analysis.ipynb
+++ b/Portfolio analysis.ipynb
@@ -168,6 +168,76 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "example description: \n",
+    "SOLD -1 VERTICAL PINS 100 19 FEB 21 60/55 PUT @.94 PHLX,\n",
+    "BOT +5 BABA @229.40,\n",
+    "SOLD -1 NIO 100 19 FEB 21 40 PUT @2.23 BOX,\n",
+    "\"\"\"\n",
+    "\n",
+    "# net_qty refers to the first qty with the +|- symbol \n",
+    "net_qty_regex = '^(?!REMOVAL).+((\\+|-)\\d+)'\n",
+    "\n",
+    "ignore_removal_regex = '^(?!REMOVAL).+'\n",
+    "\n",
+    "# qty_with_weekly refers to the numerical qty just before the date\n",
+    "qty_with_weekly_regex = f'\\s\\d+(?:\\s\\(Weeklys\\))?'\n",
+    "date_regex = '\\s(([0][1-9]|[12]?\\d|3[01])\\s(JAN|FEB|MA[RY]|APR|JU[NL]|AUG|SEPT?|OCT|NOV|DEC)\\s(\\d{2}))'\n",
+    "symbol_regex = f'\\s([A-Z]+){qty_with_weekly_regex}{date_regex}'\n",
+    "\n",
+    "ignore_option_removal_date_regex = f'{ignore_removal_regex}{date_regex}'\n",
+    "\n",
+    "spread_regex = f'\\d\\s([A-Z\\s]+){symbol_regex}'\n",
+    "assignment_regex = 'upon option (assignment)'\n",
+    "naked_option_regex = f'{ignore_removal_regex}([A-Z]+){qty_with_weekly_regex}{date_regex}'\n",
+    "\n",
+    "symbol_options_regex = f'{ignore_removal_regex}\\s([A-Z]+){qty_with_weekly_regex}{date_regex}'\n",
+    "symbol_share_regex = '(?:\\+|-)\\d+\\s([A-Z]+)\\s@\\d+'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re \n",
+    "\n",
+    "def base_parsed_list(regex_list, value): \n",
+    "    parsed = None \n",
+    "    for single_regex in regex_list: \n",
+    "        parsed_r = re.search(single_regex['regex'], value, single_regex['flag']) if 'flag' in single_regex \\\n",
+    "                    else re.search(single_regex['regex'], value)\n",
+    "        if parsed_r: \n",
+    "            parsed = single_regex['value'] if 'value' in single_regex else parsed_r.group(1)\n",
+    "            break \n",
+    "    return parsed \n",
+    "\n",
+    "trade_type_list = [\n",
+    "    {'regex': spread_regex}, \n",
+    "    {'regex': assignment_regex, 'flag': re.IGNORECASE}, \n",
+    "    {'regex': naked_option_regex, 'flag': re.IGNORECASE, 'value': 'NAKED'}, \n",
+    "    {'regex': symbol_share_regex, 'value': 'SHARE'}\n",
+    "]\n",
+    "\n",
+    "def parse_trade_type(value): \n",
+    "    return base_parsed_list(trade_type_list, value)\n",
+    "\n",
+    "symbol_list = [\n",
+    "    {'regex': symbol_options_regex}, \n",
+    "    {'regex': symbol_share_regex}, \n",
+    "]\n",
+    "        \n",
+    "def parse_symbol(value): \n",
+    "    return base_parsed_list(symbol_list, value)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -180,28 +250,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''\n",
-    "example description: \n",
-    "SOLD -1 VERTICAL PINS 100 19 FEB 21 60/55 PUT @.94 PHLX \n",
-    "BOT +5 BABA @229.40\n",
-    "SOLD -1 NIO 100 19 FEB 21 40 PUT @2.23 BOX\n",
-    "'''\n",
-    "# net_qty refers to the first qty with the +|- symbol\n",
-    "net_qty_regex = '((\\+|-)\\d+)'\n",
-    "\n",
-    "# qty_with_weekly refers to the numerical qty just before the date\n",
-    "qty_with_weekly_regex = f'\\s\\d+(?:\\s\\(Weeklys\\))?'\n",
-    "date_regex = '\\s(([0][1-9]|[12]?\\d|3[01])\\s(JAN|FEB|MA[RY]|APR|JU[NL]|AUG|SEPT?|OCT|NOV|DEC)\\s(\\d{2}))'\n",
-    "symbol_regex = f'\\s([A-Z]+){qty_with_weekly_regex}{date_regex}'\n",
-    "spread_regex = f'\\d\\s([A-Z\\s]+){symbol_regex}'\n",
-    "\n",
     "df['Datetime'] = pd.to_datetime(df['DATE'] +' ' + df['TIME'])\n",
     "df['AMOUNT'] = df['AMOUNT'].apply(lambda x: x if isinstance(x, str) == False and math.isnan(x) else convert_currency(x)) \n",
     "\n",
-    "df['Symbol'] = df['DESCRIPTION'].str.extract(symbol_regex, expand=True)[0]\n",
-    "df['Spread'] = df['DESCRIPTION'].str.extract(spread_regex, expand=True)[0]\n",
+    "df['Symbol'] = df['DESCRIPTION'].apply(parse_symbol)\n",
+    "df['Trade Type'] = df['DESCRIPTION'].apply(parse_trade_type)\n",
     "df['Qty'] = df['DESCRIPTION'].str.extract(net_qty_regex, expand=True)[0]\n",
-    "df['Exp'] =  df['DESCRIPTION'].str.extract(date_regex, expand=True)[0]\n",
+    "df['Exp'] =  df['DESCRIPTION'].str.extract(ignore_option_removal_date_regex, expand=True)[0]\n",
     "\n",
     "df.head()"
    ]
@@ -500,6 +555,13 @@
     "data = ticker_data['AMOUNT'].values\n",
     "\n",
     "waterfall_plot = plot(index=index, data=data, rotation_value=90, Title=TICKER, x_lab=\"Datetime\", y_lab=\"Amount\", figsize=(22,8))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>Monthly ROI</h3>"
    ]
   }
  ],
