--- a/Portfolio analysis.ipynb
+++ b/Portfolio analysis.ipynb
@@ -183,6 +183,7 @@
     "# net_qty refers to the first qty with the +|- symbol \n",
     "net_qty_regex = '^(?!REMOVAL).+((\\+|-)\\d+)'\n",
     "\n",
+    "\n",
     "ignore_removal_regex = '^(?!REMOVAL).+'\n",
     "\n",
     "# qty_with_weekly refers to the numerical qty just before the date\n",
@@ -196,8 +197,11 @@
     "assignment_regex = 'upon option (assignment)'\n",
     "naked_option_regex = f'{ignore_removal_regex}([A-Z]+){qty_with_weekly_regex}{date_regex}'\n",
     "\n",
+    "symbol_assignment_regex = f'\\s([A-Z]+)\\s{assignment_regex}'\n",
     "symbol_options_regex = f'{ignore_removal_regex}\\s([A-Z]+){qty_with_weekly_regex}{date_regex}'\n",
-    "symbol_share_regex = '(?:\\+|-)\\d+\\s([A-Z]+)\\s@\\d+'"
+    "symbol_share_regex = '(?:\\+|-)\\d+\\s([A-Z]+)\\s@\\d+'\n",
+    "\n",
+    "qty_for_assignment_regex = f'^(?!REMOVAL).+\\s(\\d+)\\..+{assignment_regex}'"
    ]
   },
   {
@@ -218,6 +222,14 @@
     "            break \n",
     "    return parsed \n",
     "\n",
+    "qty_list = [\n",
+    "    {'regex': net_qty_regex}, \n",
+    "    {'regex': qty_for_assignment_regex, 'flag': re.IGNORECASE}\n",
+    "]\n",
+    "\n",
+    "def parse_qty(value): \n",
+    "    return base_parsed_list(qty_list, value)\n",
+    "\n",
     "trade_type_list = [\n",
     "    {'regex': spread_regex}, \n",
     "    {'regex': assignment_regex, 'flag': re.IGNORECASE}, \n",
@@ -231,6 +243,7 @@
     "symbol_list = [\n",
     "    {'regex': symbol_options_regex}, \n",
     "    {'regex': symbol_share_regex}, \n",
+    "    {'regex': symbol_assignment_regex, 'flag': re.IGNORECASE}\n",
     "]\n",
     "        \n",
     "def parse_symbol(value): \n",
@@ -255,7 +268,7 @@
     "\n",
     "df['Symbol'] = df['DESCRIPTION'].apply(parse_symbol)\n",
     "df['Trade Type'] = df['DESCRIPTION'].apply(parse_trade_type)\n",
-    "df['Qty'] = df['DESCRIPTION'].str.extract(net_qty_regex, expand=True)[0]\n",
+    "df['Qty'] = df['DESCRIPTION'].apply(parse_qty)\n",
     "df['Exp'] =  df['DESCRIPTION'].str.extract(ignore_option_removal_date_regex, expand=True)[0]\n",
     "\n",
     "df.head()"
