monthly ROI account statement

--- a/Portfolio analysis.ipynb
+++ b/Portfolio analysis.ipynb
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Declare variables constant"
+    "<h4>Declare constant variables</h4>"
    ]
   },
   {
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "FILE_PATH = \"2021-06-27-AccountStatement.csv\"\n",
+    "FILE_PATH = \"AccountStatement.csv\"\n",
     "TABLE_NAMES = ['Cash Balance', 'Account Trade History', 'Equities', 'Options', 'Profits and Losses']\n",
     "\n",
     "def parse_key(key): \n",
@@ -247,7 +247,16 @@
     "]\n",
     "        \n",
     "def parse_symbol(value): \n",
-    "    return base_parsed_list(symbol_list, value)\n"
+    "    return base_parsed_list(symbol_list, value)\n",
+    "\n",
+    "def parse_month(value):\n",
+    "    return pd.to_datetime(value).month\n",
+    "\n",
+    "def parse_month_alpha(value):\n",
+    "    return pd.to_datetime(value).month_name()[:3]\n",
+    "\n",
+    "def parse_year(value): \n",
+    "    return pd.to_datetime(value).year"
    ]
   },
   {
@@ -270,6 +279,9 @@
     "df['Trade Type'] = df['DESCRIPTION'].apply(parse_trade_type)\n",
     "df['Qty'] = df['DESCRIPTION'].apply(parse_qty)\n",
     "df['Exp'] =  df['DESCRIPTION'].str.extract(ignore_option_removal_date_regex, expand=True)[0]\n",
+    "df['Month'] = df['DATE'].apply(parse_month)\n",
+    "df['AlphaMonth'] = df['Month'].apply(parse_month_alpha)\n",
+    "df['Year'] = df['DATE'].apply(parse_year)\n",
     "\n",
     "df.head()"
    ]
@@ -287,7 +299,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('generated/output.csv')"
+    "df.to_csv('generated/output.csv', index=False)"
    ]
   },
   {
@@ -305,7 +317,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_tickers = df['Symbol'].dropna().unique()\n",
+    "unique_tickers = df['Symbol'].sort_values().dropna().unique()\n",
     "print(unique_tickers)"
    ]
   },
@@ -322,7 +334,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TICKER = \"NIO\"\n",
+    "TICKER = \"SPCE\"\n",
     "GREEN = '#29EA38'\n",
     "RED = '#FB3C62'"
    ]
@@ -575,6 +587,98 @@
    "metadata": {},
    "source": [
     "<h3>Monthly ROI</h3>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h4>Declare constant variables</h4>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "If INCLUDE_SHARES = True, it will tabulate the purchase of shares as a loss, \n",
+    "i.e. indicate as a drawdown on the chart. However, assignment of shares\n",
+    "by options will still be included. \n",
+    "\n",
+    "If you treat the shares you outright purchase as long term hold, \n",
+    "it is advisable to change this to false. \n",
+    "\"\"\"\n",
+    "INCLUDE_SHARES = False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h4>Filter and parsed</h4>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "monthly_df =  df.dropna(subset=['Trade Type']) if INCLUDE_SHARES else df[(df['Trade Type'] != 'SHARE') & (df['Trade Type'].notna())]\n",
+    "display(monthly_df.head())\n",
+    "display(monthly_df.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grouped_month_df = monthly_df.groupby(by=['Year', 'Month']).agg({'AMOUNT': 'sum'})\n",
+    "grouped_month_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h4>Chart</h4>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grouped_month_df.reset_index(inplace=True)\n",
+    "grouped_month_df[\"Date\"] = grouped_month_df['Year'].apply(str) + '/' + grouped_month_df['Month'].apply(lambda x: str(x).zfill(2))\n",
+    "display(grouped_month_df)\n",
+    "index = grouped_month_df['Date'].values\n",
+    "data = grouped_month_df['AMOUNT'].values\n",
+    "\n",
+    "waterfall_plot = plot(index=index, data=data, rotation_value=90, Title=\"Monthly ROI\", x_lab=\"Datetime\", y_lab=\"AMOUNT\", figsize=(22,8))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h4>Detailed trade info</h4>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "show the number of trades each month. \n",
+    "\"\"\""
    ]
   }
  ],
